@@ -64,7 +64,6 @@ export(brm)
 export(brmdata)
 export(brmsformula)
 export(categorical)
-export(cauchy)
 export(cor.ar)
 export(cor.arma)
 export(cor.ma)
