@@ -2,8 +2,6 @@ test_that("family functions returns expected results", {
   expect_equal(student(identity)$link, "identity")
   expect_equal(student()$link, "identity")
   expect_error(student("logit"), "student")
-  expect_equal(cauchy(log)$family, "cauchy")
-  expect_error(cauchy("inv"), "cauchy")
   expect_equal(bernoulli(logit)$link, "logit")
   expect_error(bernoulli("sqrt"), "bernoulli")
   expect_equal(negbinomial(sqrt)$link, "sqrt")
